[tool.poetry]
name = "day-61-wtforms"
version = "0.1.0"
description = ""
authors = ["ahmad-hassan <skytheispro94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.1"
flask-wtf = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
